show orders from database
Work left still:

* Make the server and client load less if needed.
* Move the parameters out of mohican service and into app service
* Sorting buttons for proof of concept - sort on client if you have
  then all.
* Ask count and skip from server.

Signed-off-by: zeljko <zeljko@zwr.fi>

--- a/app/assets/javascripts/templates/activities-footer.html.haml
+++ b/app/assets/javascripts/templates/activities-footer.html.haml
@@ -1,1 +1,13 @@
-#acthecontainer()
+%span
+  %strong(ng-if="!page_count") Loading data, please wait
+%nav.pointer(ng-if="page_count")
+  %ul.pointer.pagination.pagination-sm(style="margin: 0px 30px;")
+    %li.pointer(ng-class="{disabled: is_first_page()}")
+      %a(ng-click="goToPage(prevPage)" aria-label="Previous" ng-disabled="is_first_page()")
+        %span(aria-hidden="true") &laquo;
+    %li.pointer(ng-repeat="page_number in pagination_array()" ng-class="{active: page_number == pageNo}")
+      %a(ng-click="goToPage(page_number)") {{showPageNumber(page_number, $index)}}
+    %li.pointer(ng-class="{disabled: is_last_page()}")
+      %a(ng-click="goToPage(nextPage)" aria-label="Next")
+        %span(aria-hidden="true") &raquo;
+.clear
