--- a/app/assets/javascripts/templates/home.html.haml
+++ b/app/assets/javascripts/templates/home.html.haml
@@ -1,5 +1,6 @@
 .container-fluid(mn-full-size ng-controller="HomeController")
   #cel-menu(ng-include="'header.html'")
-  #page-menu(ng-include="'activities-header.html'"  style="width: 100%;")
-  #page-content(ng-include="'activities-content.html'" style="width: 100%; background-color: blue;")
-  #page-footer.container-fluid(ng-include="'activities-footer.html'" style="position:absolute; bottom:0; width: 100%; height: 90px; padding: 0px 15px; margin-left: -15px;")
+  #page-menu(ng-include="'activities-header.html'"  style="width: 100%; margin-bottom: 6px;")
+  -##page-content-wrapper(style="width: 100%; padding-bottom: 40px; height: 100%;")
+  #page-content(mn-fill-size ng-include="'activities-content.html'" style="width: 100%; overflow:auto;")
+  #page-footer.container-fluid(ng-include="'activities-footer.html'" style="position:absolute; bottom:0; width: 100%; height: 40px; padding: 0px 15px; margin-left: -15px;")
