--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,6 +8,7 @@ $grid-float-breakpoint: 1280px;
 @import "bootstrap";
 @import "mohican";
 @import "rails_bootstrap_forms";
+@import "includes/**/*";
 
 #search_control, #second_page_title {
   margin-top: 30px;
@@ -21,4 +22,11 @@ $grid-float-breakpoint: 1280px;
   position: absolute;
   right: 0;
   padding: 8px 14px;
+}
+
+.inline-multi-select {
+  display: inline;
+  float: left;
+  clear: none;
+  margin-right: 6px;
 }
