--- a/app/assets/javascripts/templates/activities-footer.html.haml
+++ b/app/assets/javascripts/templates/activities-footer.html.haml
@@ -1,5 +1,5 @@
 .row
-  .col-lg-6
+  .col-lg-5
     %span
       %strong(ng-if="!page_count") Loading data, please wait
     %nav.pointer(ng-if="page_count")
@@ -12,8 +12,12 @@
         %li.pointer(ng-class="{disabled: is_last_page()}")
           %a(ng-click="goToPage(nextPage)" aria-label="Next")
             %span(aria-hidden="true") &raquo;
-  .col-lg-6
+  .col-lg-7.hidden-md.hidden-sm.hidden-xs
     .page-menu.form-inline
-      %span.inline-multi-select(multi-select input-model="modernWebBrowsers" button-label="name" item-label="name desc" tick-property="selected" helper-elements="" default-label="Default layout" output-model="selectedRaces" orientation="horizontal" is-disabled="true")
-      %span.inline-multi-select(multi-select input-model="modernWebBrowsers" button-label="name" item-label="name desc" tick-property="selected" helper-elements="" default-label="No filter selected" output-model="selectedRaces" orientation="horizontal" is-disabled="true")
-      %span.inline-multi-select(multi-select input-model="modernWebBrowsers" button-label="name" item-label="name desc" tick-property="selected" helper-elements="" default-label="Sorted by Order_ID (Default)" output-model="selectedRaces" orientation="horizontal")
+      .btn-group(style="")
+        %button.btn.btn-default Muokka
+        %button.btn.btn-default Poista
+        %button.btn.btn-default Pikasuodatin
+      .form-group.hidden-xs
+        %label(for="mainToolbarWeight")Weight
+        %input#mainToolbarWeight.form-control(type="text" placeholder="what is this?")
