--- a/app/assets/javascripts/templates/activities-header.html.haml
+++ b/app/assets/javascripts/templates/activities-header.html.haml
@@ -6,9 +6,9 @@
   .col-sm-10.col-xs-9
     .page-menu.form-inline
       %span.inline-multi-select(multi-select input-model="listLayouts" helper-elements="all none reset filter" button-label="show" item-label="name desc" tick-property="selected" default-label="Select layout" selection-mode="single")
-      %span.inline-multi-select(multi-select input-model="listFitlers" helper-elements="" button-label="show" item-label="name desc" tick-property="selected" default-label="Select layout" selection-mode="single")
+      %span.inline-multi-select(multi-select input-model="listFitlers" helper-elements="" button-label="show" item-label="name desc" tick-property="selected" default-label="Select filter" selection-mode="single")
       .form-group.hidden-md.hidden-sm.hidden-xs
-      %span#select_sort.inline-multi-select(multi-select input-model="listSorting" helper-elements="" button-label="show" item-label="name desc" tick-property="selected" default-label="Select layout" selection-mode="single" on-item-click="sort_by(data.name)")
+      %span#select_sort.inline-multi-select(multi-select input-model="listSorting" helper-elements="" button-label="show" item-label="name desc" tick-property="selected" default-label="Select sorting" selection-mode="single" on-item-click="sort_by(data.name)")
       .form-group.hidden-md.hidden-sm.hidden-xs
         .input-group
           .input-group-addon Boom
