layouts: show defined layouts in multi-select
Signed-off-by: Zeljko <zeljko@zwr.fi>

--- a/app/assets/javascripts/templates/activities-content.html.haml
+++ b/app/assets/javascripts/templates/activities-content.html.haml
@@ -3,6 +3,6 @@
 %table.table.table-striped(ng-if="page_count")
   %thead
     %tr
-      %th(ng-repeat="field_info in layout()" ng-style="{width: field_info.ColumnWidth + 'px'}") {{field_info.HeaderText}}
+      %th(ng-repeat="field_info in currentLayout()" ng-style="{width: field_info.ColumnWidth + 'px'}") {{field_info.HeaderText}}
   %tr(ng-repeat="item in page_items")
-    %td(ng-repeat="field_info in layout()") {{item.copy[field_info.Name]}}
+    %td(ng-repeat="field_info in currentLayout()") {{item.copy[field_info.Name]}}
