change layout on click and store in url
Signed-off-by: Zeljko <zeljko@zwr.fi>

--- a/app/assets/javascripts/templates/activities-header.html.haml
+++ b/app/assets/javascripts/templates/activities-header.html.haml
@@ -5,7 +5,7 @@
       %span(style="color: #006699;font-size: Medium;font-weight: bold;text-decoration: none; padding-top: 6px;") Siirtymät
   .col-sm-10.col-xs-9
     .page-menu.form-inline
-      %span.inline-multi-select(multi-select input-model="listLayouts" helper-elements="" button-label="show" item-label="name desc" tick-property="selected" default-label="Select layout" selection-mode="single")
+      %span.inline-multi-select(multi-select input-model="listLayouts" helper-elements="" button-label="show" item-label="name desc" tick-property="selected" default-label="Select layout" selection-mode="single" on-item-click="showLayout(data.name)")
       %span.inline-multi-select(multi-select input-model="listFitlers" helper-elements="all none reset filter" button-label="show" item-label="name desc" tick-property="selected" default-label="Select filter" selection-mode="single")
       .form-group.hidden-md.hidden-sm.hidden-xs
       %span#select_sort.inline-multi-select(multi-select input-model="listSorting" helper-elements="" button-label="show" item-label="name desc" tick-property="selected" default-label="Select sorting" selection-mode="single" on-item-click="sort_by(data.name)")
