--- a/app/assets/javascripts/templates/header.html.haml
+++ b/app/assets/javascripts/templates/header.html.haml
@@ -1,87 +1,39 @@
-%nav.navbar.navbar-static-top.navbar-inverse(role="navigation")
-  .container-fluid
-    .navbar-header.pull-left
-      %a.navbar-brand(href="/#/")
-        =image_tag "logo.png", height: '20'
-    -# Sticky menu, on the right
-    #navbar-steady.navbar-header.pull-right
-      %ul.nav.navbar-nav.pull-left
-        %li.pull-right
-          %a (Lopeta)
-        %li.navbar-text.pull-right
-          %span
-            %span Käyttäjä:
-            %strong Identoi
-      -# following button should ALWAYS be there, unless there is no colapsable items
-      %button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false" aria-controls="navbar" ng-click="isCollapsed = !isCollapsed")
-        %span.sr-only Toggle navigation
-        %span.icon-bar
-        %span.icon-bar
-        %span.icon-bar
-    #navbar.navbar-collapse.collapse(collapse="isCollapsed")
-      %ul.nav.navbar-nav
-        %li
-          %a Aloitus
-        %li.dropdown(dropdown on-toggle="toggled(open)")
-          %a.dropdown-toggle(dropdown-toggle)
-            Toimitukset ja Siirtymät
-            %span.caret
-          %ul.dropdown-menu
-            %li
-              %a Toimitukset
-            %li
-              %a Siirtymät
-            %li
-              %a Routes
-        %li
-          %a(ng-click="alertMe()") Suunnittelu
-        %li
-          %a Kartat
-        %li
-          %a Historia
-        %li.dropdown(dropdown on-toggle="toggled(open)")
-          %a.dropdown-toggle(dropdown-toggle)
-            Resurssit
-            %span.caret
-          %ul.dropdown-menu
-            %li
-              %a Resurssit
-            %li
-              %a Aikataulut
-            %li
-              %a Resurssilinkit
-            %li
-              %a Resurssiryhmät
-            %li
-              %a Tuntiraportit
-            %li
-              %a Tuntikirjanpito
-        %li
-          %a Asiakkaat
-      %ul.nav.navbar-nav.navbar-right
-        %li.dropdown(dropdown on-toggle="toggled(open)")
-          %a.dropdown-toggle(dropdown-toggle)
-            Admin
-            %span.caret
-          %ul.dropdown-menu
-            %li
-              %a Laataa kuvia
-            %li
-              %a Tehtävätyypit
-            %li.divider
-            %li.dropdown-header Some options
-            %li
-              %a Asiakaskohteet
-            %li
-              %a Kohteet
-            %li
-              %a Hintaryhmät
-            %li.divider
-            %li.dropdown-header Final admin options
-            %li
-              %a Raportit
-            
-            %li
-              %a Route Planning
-%alert(ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)") {{alert.msg}}
--# <button class='btn btn-default' ng-click="addAlert()">Add Alert</button>
+%mn-navbar
+  %mn-navbar-title
+  %mn-navbar-right
+    %mn-menu
+      %span Käyttäjä:
+      %strong Identoi
+    %mn-menu (Lopeta)
+  %mn-navbar-collapsible
+    %mn-navbar-collapsible-left
+      %mn-menu Aloitus
+      %mn-menu-group(mn-text="Toimitukset ja Siirtymät")
+        %mn-menu-item Toimitukset
+        %mn-menu-item Siirtymät
+        %mn-menu-item Routes
+      %mn-menu(ng-click="alertMe()") Suunnittelu
+      %mn-menu Kartat
+      %mn-menu Historia
+      %mn-menu-group(mn-text="Resurssit")
+        %mn-menu-item Resurssit
+        %mn-menu-item Aikataulut
+        %mn-menu-item Resurssilinkit
+        %mn-menu-item Resurssiryhmät
+        %mn-menu-item Tuntiraportit
+        %mn-menu-item Tuntikirjanpito
+      %mn-menu Asiakkaat
+    %mn-navbar-collapsible-right
+      %mn-menu-group(mn-text="Admin")
+        %mn-menu-item Laataa kuvia
+        %mn-menu-item Tehtävätyypit
+        %mn-menu-divider
+        %mn-menu-header Some options
+        %mn-menu-item Asiakaskohteet
+        %mn-menu-item Kohteet
+        %mn-menu-item Hintaryhmät
+        %mn-menu-divider
+        %mn-menu-header Final admin options
+        %mn-menu-item Raportit
+        %mn-menu-item Route Planning
+%mn-alerts
