--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html(ng-app="id5")
   %head
-    %title #{"id5".capitalize}
+    %title #{"Celesta Plan II"}
     %meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     -# android stand alone mode
     %meta(name="mobile-web-app-capable" content="yes")
