use png instead of ico for internet explorer
Although .ico is MS format, IE does not understand it.

Signed-off-by: zeljko <zeljko@zwr.fi>

--- a/app/assets/javascripts/templates/activities-header.html.haml
+++ b/app/assets/javascripts/templates/activities-header.html.haml
@@ -1,7 +1,7 @@
 .row
   .col-sm-2.col-xs-3
     .page-menu(style="padding: 1px 6px;")
-      =image_tag "refresh.ico"
+      =image_tag "refresh.png"
       %span(style="color: #006699;font-size: Medium;font-weight: bold;text-decoration: none; padding-top: 6px;") Siirtymät
   .col-sm-10.col-xs-9
     .page-menu.form-inline
