new project framework
New app and mohican are both in id5 project, and old
app is parallel and accessible as /index_old. No old files will
be changed and will eventually be deleted. Mohican will for a
be developed inside the master project and later moved to a
gem.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,8 +2,7 @@
 *= require_self
 */
 
-$grid-float-breakpoint: 1280px;
-
+@import "config";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "mohican";
