--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -29,4 +29,4 @@
   %body(role="document")
     %div.full_height(ng-view)
       %h1(style="margin-top: 10px;")=t :'Please wait' # Please wait while the application loads!
-    = javascript_include_tag 'app_old'
+    = javascript_include_tag 'app'
