--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,7 +5,7 @@
 @import "config";
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "mohican";
+// @import "mohican";
 @import "rails_bootstrap_forms";
 @import "includes/**/*";
 
@@ -30,10 +30,10 @@
   margin-right: 6px;
   margin-bottom: 2px;
 }
-.multiSelect .button { 
+.multiSelect .button {
   width: 180px;
 }
 
-#select_sort .button { 
+#select_sort .button {
   width: 240px;
 }
