--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,7 @@
 !!!
-%html(ng-app="id5")
+%html
   %head
+    %base{:href => "/"}/
     %title #{"Celesta Plan II"}
     %meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     -# android stand alone mode
@@ -21,12 +22,19 @@
     %meta(name="msapplication-TileColor" content="#FF3300")
     %meta(name="msapplication-TileImage" content="assets/icon.png")
     %meta(name="msapplication-tooltip" content="ID Pickup")
-    -# 
+    :css
+      [ng-cloak] {
+        display: none;
+      }
+    -#
     = stylesheet_link_tag    'application', media: 'all'
     = csrf_meta_tags
     -# If you need something from the Ruby code, set it up here
     -# %script
-  %body(role="document")
-    %div.full_height(ng-view)
-      %h1(style="margin-top: 10px;")=t :'Please wait' # Please wait while the application loads!
+  %body(data-main-app ng-cloak)
+    %a{"ui-sref" => "start"}
+      start
+    %a{"ui-sref" => "map"}
+      map
+    %div(ui-view)
     = javascript_include_tag 'app'
