--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -5,7 +5,7 @@
 @import "config";
 @import "bootstrap-sprockets";
 @import "bootstrap";
-// @import "mohican";
+@import "mohican";
 @import "rails_bootstrap_forms";
 @import "includes/**/*";
 
