Scss files structure
-id5 has it's own styles
-id5 has sass variables config for overriding mohican defaults
-id5 includes mohican styles
-mohican has default variables config
-mohican cares about all vendor styles needed
(I have added one more TODO into Gemfile related to vendor styles (and js files):
@zmilojko TODO: all mohican vendor games could be moved to mohican Gemfile?)
-body backgorund with top meny shadow is no more body tag property. I have referenced it by [mn-full-size]

Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/views/home/index_old.html.haml
+++ b/app/views/home/index_old.html.haml
@@ -21,8 +21,8 @@
     %meta(name="msapplication-TileColor" content="#FF3300")
     %meta(name="msapplication-TileImage" content="assets/icon.png")
     %meta(name="msapplication-tooltip" content="ID Pickup")
-    -# 
-    = stylesheet_link_tag    'application', media: 'all'
+    -#
+    = stylesheet_link_tag    'app_old', media: 'all'
     = csrf_meta_tags
     -# If you need something from the Ruby code, set it up here
     -# %script
