new routes: customers, design, history
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/components/appHeader/appHeader.template.html
+++ b/app/assets/javascripts/app/components/appHeader/appHeader.template.html
@@ -17,11 +17,15 @@
         <mn-menu-group-item> Siirtymät</mn-menu-group-item>
         <mn-menu-group-item> Routes</mn-menu-group-item>
       </mn-menu-group>
-      <mn-menu-item>Suunnittelu</mn-menu-item>
+      <mn-menu-item>
+        <mn-menu-item-route sref="base.design">Suunnittelu</mn-menu-item-route>
+      </mn-menu-item>
       <mn-menu-item>
         <mn-menu-item-route sref="base.map">Kartat</mn-menu-item-route>
       </mn-menu-item>
-      <mn-menu-item>Historia</mn-menu-item>
+      <mn-menu-item>
+        <mn-menu-item-route sref="base.history">Historia</mn-menu-item-route>
+      </mn-menu-item>
       <mn-menu-group mn-text="Resurssit">
         <mn-menu-group-item> Resurssit</mn-menu-group-item>
         <mn-menu-group-item> Aikataulut</mn-menu-group-item>
@@ -30,7 +34,9 @@
         <mn-menu-group-item> Tuntiraportit</mn-menu-group-item>
         <mn-menu-group-item> Tuntikirjanpito</mn-menu-group-item>
       </mn-menu-group>
-      <mn-menu-item>Asiakkaat</mn-menu-item>
+      <mn-menu-item>
+        <mn-menu-item-route sref="base.customers">Asiakkaat</mn-menu-item-route>
+      </mn-menu-item>
     </mn-navbar-collapsible-left>
     <mn-navbar-collapsible-right>
       <mn-menu-group mn-text="Admin">
