focus and hover text decorations fix
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -23,12 +23,15 @@ mn-menu-item-route > a > span {
   color: #777777;
   text-decoration: none;
 }
-mn-menu-item-route > a, mn-menu-item-route > a > span:hover, mn-menu-group > li > a:hover {
+mn-menu-item-route > a,
+mn-menu-item-route > a > span:hover,
+mn-menu-group > li > a:hover,
+mn-menu-item-route > a:hover {
   color: white;
   text-decoration: none;
 }
 
-a.mn-menu-item-route-active span, a.mn-menu-item-route-active span:focus {
+a.mn-menu-item-route-active span, a.mn-menu-item-route-active span:focus, a.mn-menu-item-route-active:focus {
   color: red;
   text-decoration: none;
 }
