links colors config
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/config.css.scss
+++ b/app/assets/stylesheets/config.css.scss
@@ -1,1 +1,4 @@
 $grid-float-breakpoint: 1280px;
+$mn-menu-item-route-active-color: red;
+$mn-menu-item-route-hover-color: white;
+$mn-menu-item-route-color: #777777;
