angular-ui routes: delivery and transitions
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/components/appHeader/appHeader.template.html
+++ b/app/assets/javascripts/app/components/appHeader/appHeader.template.html
@@ -13,9 +13,15 @@
         <mn-menu-item-route sref="base.start">Aloitus</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-group mn-text="Toimitukset ja Siirtymät">
-        <mn-menu-group-item> Toimitukset</mn-menu-group-item>
-        <mn-menu-group-item> Siirtymät</mn-menu-group-item>
-        <mn-menu-group-item> Routes</mn-menu-group-item>
+        <mn-menu-group-item>
+          <mn-menu-item-route sref="base.deliveries">Toimitukset</mn-menu-item-route>
+        </mn-menu-group-item>
+        <mn-menu-group-item>
+          <mn-menu-item-route sref="base.transitions">Siirtymät</mn-menu-item-route>
+        </mn-menu-group-item>
+        <mn-menu-group-item>
+          <mn-menu-item-route sref="base.routes">Routes</mn-menu-item-route>
+        </mn-menu-group-item>
       </mn-menu-group>
       <mn-menu-item>
         <mn-menu-item-route sref="base.design">Suunnittelu</mn-menu-item-route>
