angular-ui routes: resources group
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/components/appHeader/appHeader.template.html
+++ b/app/assets/javascripts/app/components/appHeader/appHeader.template.html
@@ -33,12 +33,24 @@
         <mn-menu-item-route sref="base.history">Historia</mn-menu-item-route>
       </mn-menu-item>
       <mn-menu-group mn-text="Resurssit">
-        <mn-menu-group-item> Resurssit</mn-menu-group-item>
-        <mn-menu-group-item> Aikataulut</mn-menu-group-item>
-        <mn-menu-group-item> Resurssilinkit</mn-menu-group-item>
-        <mn-menu-group-item> Resurssiryhmät</mn-menu-group-item>
-        <mn-menu-group-item> Tuntiraportit</mn-menu-group-item>
-        <mn-menu-group-item> Tuntikirjanpito</mn-menu-group-item>
+        <mn-menu-group-item>
+          <mn-menu-item-route sref="base.resources">Resurssit</mn-menu-item-route>
+        </mn-menu-group-item>
+        <mn-menu-group-item>
+          <mn-menu-item-route sref="base.timetables">Aikataulut</mn-menu-item-route>
+        </mn-menu-group-item>
+        <mn-menu-group-item>
+          <mn-menu-item-route sref="base.links">Resurssilinkit</mn-menu-item-route>
+        </mn-menu-group-item>
+        <mn-menu-group-item>
+          <mn-menu-item-route sref="base.groups">Resurssiryhmät</mn-menu-item-route>
+        </mn-menu-group-item>
+        <mn-menu-group-item>
+          <mn-menu-item-route sref="base.hoursReports">Tuntiraportit</mn-menu-item-route>
+        </mn-menu-group-item>
+        <mn-menu-group-item>
+          <mn-menu-item-route sref="base.hoursAccounting">Tuntikirjanpito</mn-menu-item-route>
+        </mn-menu-group-item>
       </mn-menu-group>
       <mn-menu-item>
         <mn-menu-item-route sref="base.customers">Asiakkaat</mn-menu-item-route>
