--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -30,6 +30,11 @@ mn-menu-item-route > a:hover {
   color: $mn-menu-item-route-hover-color;
   text-decoration: none;
 }
+mn-menu-group-item > li > mn-menu-item-route > a > span:hover,
+mn-menu-group-item > li > mn-menu-item-route > a:not(.mn-menu-item-route-active) > span:hover {
+  color: $mn-menu-item-route-color;
+  text-decoration: none;
+}
 
 a.mn-menu-item-route-active span,
 a.mn-menu-item-route-active span:focus,
