mn-app-header directive
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -33,7 +33,6 @@
     -# %script
   %body(data-main-app ng-cloak role="document")
     %div.full_height
-      .container-fluid(mn-full-size)
-        #cel-menu(ng-include="'app/components/appHeader/appHeader.template.html'")
+      %mn-app-header
       %div.full_height(ui-view)
     = javascript_include_tag 'app'
